fix label overlapping issue

--- a/src/components/media/uploadOrEditMedia/_uploadOrEditMedia.module.scss
+++ b/src/components/media/uploadOrEditMedia/_uploadOrEditMedia.module.scss
@@ -351,7 +351,10 @@
 	font-size: 12px !important;
 	line-height: 24px !important;
 	padding: 4px 6px !important;
-	margin-right: 6px !important;
+	margin-right: 3px !important;
+	margin-left: 3px !important;
+	margin-top: 2px !important;
+	margin-bottom: 2px !important;
 	svg {
 		color: black !important;
 		font-size: 20px !important;
